--- a/sass/components/_works.scss
+++ b/sass/components/_works.scss
@@ -19,15 +19,18 @@
   margin-bottom: 40px;
   justify-content: flex-start;
 
-  @media screen and (min-width: $desctop) {
-    justify-content: center;
-    margin-bottom: 50px; /* padding-top: 94px; */
-  }
-
   @media screen and (min-width: $mobile) {
     flex-wrap: wrap;
     row-gap: 8px;
     column-gap: 15px;
+  }
+  @media screen and (min-width: $tablet) {
+    justify-content: center;
+    margin-bottom: 30px; /* padding-top: 94px; */
+  }
+
+  @media screen and (min-width: $desctop) {
+    margin-bottom: 50px; /* padding-top: 94px; */
   }
 }
 .works-card {
